src/tess/tl/test/fail/test_fail_ptr_from_integer.tl
#module main

main() {
    x            := 128
    p: Ptr[CInt] := x
    p.*
}
